@@ -281,13 +281,13 @@ if ((file_exists($input["path_rrdtool"]["default"])) && (($config["cacti_server_
 
 	$out_array = array();
 
-	exec($input["path_rrdtool"]["default"], $out_array);
+	exec("\"" . $input["path_rrdtool"]["default"] . "\"", $out_array);
 
 	if (sizeof($out_array) > 0) {
 		if (ereg("^RRDtool 1\.4", $out_array[0])) {
-            $input["rrdtool_version"]["default"] = "rrd-1.4.x";
+			$input["rrdtool_version"]["default"] = "rrd-1.4.x";
 		}else if (ereg("^RRDtool 1\.3\.", $out_array[0])) {
-            $input["rrdtool_version"]["default"] = "rrd-1.3.x";
+			$input["rrdtool_version"]["default"] = "rrd-1.3.x";
 		}else if (ereg("^RRDtool 1\.2\.", $out_array[0])) {
 			$input["rrdtool_version"]["default"] = "rrd-1.2.x";
 		}else if (ereg("^RRDtool 1\.0\.", $out_array[0])) {
