@@ -90,7 +90,7 @@ function query_script_host($host_id, $snmp_query_id) {
 	debug_log_insert("data_query", "XML file parsed ok.");
 
 	if (isset($script_queries["script_server"])) {
-		$script_queries["script_path"] = "|path_php_binary| -q " . $script_queries["script_path"];
+		$script_queries["script_path"] = "\"|path_php_binary|\" -q " . $script_queries["script_path"];
 	}
 
 	$script_path = get_script_query_path((isset($script_queries["arg_prepend"]) ? $script_queries["arg_prepend"] . " ": "") . $script_queries["arg_index"], $script_queries["script_path"], $host_id);
@@ -215,7 +215,7 @@ function query_snmp_host($host_id, $snmp_query_id) {
 				for ($i=0; $i<sizeof($snmp_indexes); $i++) {
 					$oid = $field_array["oid"] .  "." . $snmp_indexes[$i]["value"];
 					$oid .= isset($field_array["oid_suffix"]) ? ("." . $field_array["oid_suffix"]) : "";
-					
+
 					$value = cacti_snmp_get($host["hostname"], $host["snmp_community"], $oid,
 						$host["snmp_version"], $host["snmp_username"], $host["snmp_password"],
 						$host["snmp_auth_protocol"], $host["snmp_priv_passphrase"], $host["snmp_priv_protocol"],
